[package]
name = "clif"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
color = ["dep:crayon"]

[dependencies]
crayon = { git = "https://github.com/c-rus/crayon", tag = "0.1.0", optional = true }

[dev-dependencies]
crayon = { git = "https://github.com/c-rus/crayon", tag = "0.1.0" }