[package]
name = "clif"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
color = ["dep:crayon"]

[dependencies]
crayon = { git = "https://github.com/cdotrus/crayon", tag = "0.1.1", version = "0.1.1", optional = true }

[dev-dependencies]
crayon = { git = "https://github.com/cdotrus/crayon", tag = "0.1.1", version = "0.1.1" }
