[package]
name = "cliproc"
description = "A fast, low-level, and configurable command-line processor"
version = "2.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cdotrus/cliproc"
keywords = ["cli", "parser", "arg", "parse"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
